--- a/back/package.json
+++ b/back/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "bcrypt": "5.1.1",
     "body-parser": "1.20.3",
-    "connect-sqlite3": "^0.9.15",
+    "connect-sqlite3": "0.9.15",
     "cors": "2.8.5",
     "express": "4.21.2",
     "express-session": "1.18.1",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
     "pg": "8.13.2"
   },
   "devDependencies": {
