--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "4.0.6",
     "react": "19.0.0",
-    "react-cookie": "^7.2.2",
+    "react-cookie": "7.2.2",
     "react-dom": "19.0.0",
     "react-router": "7.1.5",
     "tailwindcss": "4.0.6"
